@@ -24,7 +24,10 @@ module Fairy
 
     def_delegator :@bwide_inject, :value
     def_delegator :@bwide_inject, :output=
-    def_delegator :@bwide_inject, :each_export
+    def_delegator :@bwide_inject, :each_assigned_filter
+    def_delegator :@bwide_inject, :each_export_by
+    def_delegator :@bwide_inject, :bind_export
+    
 
     def input=(input)
       @blocal_inject.input = input
@@ -35,6 +38,10 @@ module Fairy
       def initialize(controller, opts, block_source)
 	super
 	@block_source = block_source
+
+	@no = 0
+	@first_node = nil
+	@first_node_mutex = Mutex.new
       end
 
       def node_class_name
@@ -44,22 +51,46 @@ module Fairy
       def njob_creation_params
 	[@block_source]
       end
-      
-      def each_export(&block)
 
-	no = 0
-	first_node = nil
-	each_node do |node|
-	  no += 1
-	  if first_node
-	    node.export.output = first_node.export.output
+      def each_assigned_filter(&block)
+	super
+
+	@first_node.export.output_no_import = @no
+      end
+
+      def each_export_by(njob, mapper, &block)
+	@first_node_mutex.synchronize do
+	  @no += 1
+	  if @first_node
+	    njob.export.output = @first_node.export.output
+	    njob.export.no = @no - 1
 	  else
-	    first_node = node
-	    block.call node.export, node
+	    super
+	    @first_node = njob
 	  end
 	end
-	first_node.export.output_no_import = no
       end
+
+      def bind_export(exp, imp)
+	# do nothing.
+      end
+
+
+#       def each_export(&block)
+
+# 	no = 0
+# 	first_node = nil
+# 	each_node do |node|
+# 	  no += 1
+# 	  if first_node
+# 	    node.export.output = first_node.export.output
+# 	  else
+# 	    first_node = node
+# 	    block.call node.export, node
+# 	  end
+# 	end
+# 	first_node.export.output_no_import = no
+#       end
 
     end
 
